--- a/src/ui.html
+++ b/src/ui.html
@@ -38,12 +38,37 @@
         </div>
 
         <div class="form-group">
-            <div class="group-field">
-                <label for="" class="group-field__label">Контактное лицо*</label>
-                <input type="text" class="form-control base-input group-field__input">
-            </div>    
+            <label class="materil-group">
+                <span class="materil-group__label">Контактное лицо*</span>
+                <input type="text" class="form-control base-input materil-group__input">
+            </label>
+        </div>
+
+        <div class="form-group">
+            <label class="materil-group active">
+                <span class="materil-group__label">Контактное лицо*</span>
+                <input type="text" class="form-control base-input materil-group__input">
+            </label>
+        </div>
+
+        <div class="form-group">
+            <label class="materil-group error">
+                <span class="materil-group__label">Контактное лицо*</span>
+                <input type="text" class="form-control base-input materil-group__input">
+                <div class="materil-group__error-text">Укажите email</div>
+            </label>
         </div>
             
+        <div class="form-group">
+            <select name="" id="" class="test">
+                <option value="1">1</option>
+                <option value="1">1</option>
+                <option value="1">1</option>
+                <option value="1">1</option>
+                <option value="1">1</option>
+                <option value="1">1</option>
+            </select>
+        </div>
 
     </div>    
 
