--- a/src/ui.html
+++ b/src/ui.html
@@ -23,14 +23,44 @@
 <body>
     <div class="ui">
         <h2>Заголовки</h2>
+        <h2 class="h1">Каталог продукции на нашем портале включает в себя:</h2>
         <h2 class="h2">Каталог продукции на нашем портале включает в себя:</h2>
 
         <h2>Текста</h2>
         <p>Пришлите ваш прайс-лист нашим менеджерам</p>
 
+        <h2>Links</h2>
+        <div>
+            <a href="#" class="link">Link</a>
+        </div>
+        <div>
+            <a href="#" class="link link-dark">Link</a>
+        </div>
+
         <h2>Кнопки</h2>
-        <button class="btn btn-primary">button</button>
-        <button class="btn btn-primary">Зарегистрирвоаться</button>
+        <div class="form-group">
+            <button class="btn btn-primary">button</button>
+            <button class="btn btn-primary">Зарегистрирвоаться</button>
+        </div>
+        <div class="form-group">
+            <button class="btn btn-secondary">button</button>
+            <button class="btn btn-secondary">Зарегистрирвоаться</button>
+        </div>    
+
+        <h2>Select</h2>
+        <div class="form-group">
+            <label class="materil-group active">
+                <span class="materil-group__label">Город*</span>
+                <select name="" id="" class="select">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                </select>
+            </label>
+        </div>
 
         <h2>Inputs</h2>
         <div class="form-group">
@@ -57,17 +87,6 @@
                 <input type="text" class="form-control base-input materil-group__input">
                 <div class="materil-group__error-text">Укажите email</div>
             </label>
-        </div>
-            
-        <div class="form-group">
-            <select name="" id="" class="test">
-                <option value="1">1</option>
-                <option value="1">1</option>
-                <option value="1">1</option>
-                <option value="1">1</option>
-                <option value="1">1</option>
-                <option value="1">1</option>
-            </select>
         </div>
 
     </div>    
