--- a/src/home.html
+++ b/src/home.html
@@ -3,16 +3,88 @@
 
 <head>
     <meta charset="UTF-8">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
 
 <body>
-    <div class="header">
-        header
+<div class="header">
+    header
+</div>
+
+
+<div class="home content">
+    <nav class="navigation">
+        <ul class="navigation__list container">
+            <li class="navigation__item">
+                <a href="#" class="navigation__link">Тендеры</a>
+            </li>
+            <li class="navigation__item">
+                <a href="#" class="navigation__link">Цены поставщиков</a>
+            </li>
+            <li class="navigation__item">
+                <a href="#" class="navigation__link">Заявки покупателей</a>
+            </li>
+            <li class="navigation__item">
+                <a href="#" class="navigation__link">Объявления</a>
+            </li>
+            <li class="navigation__item">
+                <a href="#" class="navigation__link">Услуги</a>
+            </li>
+            <li class="navigation__item">
+                <a href="#" class="navigation__link">Реклама</a>
+            </li>
+            <li class="navigation__item">
+                <a href="#" class="navigation__link">Справочник</a>
+            </li>
+            <li class="navigation__item">
+                <a href="#" class="navigation__link">Контакты</a>
+            </li>
+        </ul>
+    </nav>
+    <div class="banner" style="text-align: center">
+        <img src="img/home-banner.jpg" alt="баннер">
     </div>
-    <img src="img/home-banner.jpg" alt="">
+    <div class="capabilities">
+        <div class="container">
+            <div class="capabilities__container">
+                <div class="capabilities__item">
+                    <div class="capabilities__icon">
+                        <img src="img/capabilities/icon-1.svg" alt="">
+                    </div>
+                    <p class="capabilities__text">
+                        Создайте страницу компании на портале
+                    </p>
+                </div>
+                <div class="capabilities__item">
+                    <div class="capabilities__icon">
+                        <img src="img/capabilities/icon-2.svg" alt="">
+                    </div>
+                    <p class="capabilities__text">
+                        Пришлите ваш прайс-лист нашим менеджерам
+                    </p>
+                </div>
+                <div class="capabilities__item">
+                    <div class="capabilities__icon">
+                        <img src="img/capabilities/icon-3.svg" alt="">
+                    </div>
+                    <p class="capabilities__text">
+                        Участвуйте в тендерах по РФ и СНГ
+                    </p>
+                </div>
+                <div class="capabilities__item">
+                    <div class="capabilities__icon">
+                        <img src="img/capabilities/icon-4.svg" alt="">
+                    </div>
+                    <p class="capabilities__text">
+                        Добавьте рекламные баннеры
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 
 </html>
