home page product-catalog

--- a/src/home.html
+++ b/src/home.html
@@ -46,6 +46,7 @@
     <div class="banner" style="text-align: center">
         <img src="img/home-banner.jpg" alt="баннер">
     </div>
+
     <div class="capabilities">
         <div class="container">
             <div class="capabilities__container">
@@ -84,6 +85,119 @@
             </div>
         </div>
     </div>
+
+    <div class="product-catalog">
+        <div class="product-catalog__container container">
+            <div class="product-catalog__left">
+                <h2 class="product-catalog__title h1">
+                    Каталог продукции на нашем портале включает в себя:
+                </h2>
+                <ul class="product-catalog__list">
+                    <li class="product-catalog__item">
+                        <a href="" class="product-catalog__product link">
+                            Цемент и бетон
+                        </a>
+                    </li>
+                    <li class="product-catalog__item">
+                        <a href="" class="product-catalog__product link">
+                            Кирпич
+                        </a>
+                    </li>
+                    <li class="product-catalog__item">
+                        <a href="" class="product-catalog__product link">
+                            ЖБИ
+                        </a>
+                    </li>
+                    <li class="product-catalog__item">
+                        <a href="" class="product-catalog__product link">
+                            Пиломатериал
+                        </a>
+                    </li>
+                    <li class="product-catalog__item">
+                        <a href="" class="product-catalog__product link">
+                            Песок
+                        </a>
+                    </li>
+                    <li class="product-catalog__item">
+                        <a href="" class="product-catalog__product link">
+                            Трубы
+                        </a>
+                    </li>
+
+                    <li class="product-catalog__item">
+                        <a href="" class="product-catalog__product link">
+                            ДВП ДСП OSB
+                        </a>
+                    </li>
+                    <li class="product-catalog__item">
+                        <a href="" class="product-catalog__product link">
+                            Крепёж и метизы
+                        </a>
+                    </li>
+                    <li class="product-catalog__item">
+                        <a href="" class="product-catalog__product link">
+                            Всё для крыши
+                        </a>
+                    </li>
+                    <li class="product-catalog__item">
+                        <a href="" class="product-catalog__product link">
+                            Грунт
+                        </a>
+                    </li>
+                    <li class="product-catalog__item">
+                        <a href="" class="product-catalog__product link">
+                            Режущий инструмент
+                        </a>
+                    </li>
+                    <li class="product-catalog__item">
+                        <a href="" class="product-catalog__product link">
+                            Щебень
+                        </a>
+                    </li>
+
+                    <li class="product-catalog__item">
+                        <a href="" class="product-catalog__product link">
+                            Фанера
+                        </a>
+                    </li>
+                    <li class="product-catalog__item">
+                        <a href="" class="product-catalog__product link">
+                            Фитинги для труб
+                        </a>
+                    </li>
+                    <li class="product-catalog__item">
+                        <a href="" class="product-catalog__product link">
+                            Гипсокартон
+                        </a>
+                    </li>
+                    <li class="product-catalog__item">
+                        <a href="" class="product-catalog__product link">
+                            Абразивный инструмент
+                        </a>
+                    </li>
+                </ul>
+
+                <p class="product-catalog__footnote">
+                    Зарегистрируйтесь, разместите свой прайс-лист и начните получать заказы!
+                </p>
+                <div class="product-catalog__actions">
+                    <a href="" class="btn btn-primary">Разместить прайс - лист</a>
+                    <a href="" class="btn btn-secondary">Перейти в каталог</a>
+                </div>
+            </div>
+            <div class="product-catalog__right">
+                <a href="" class="banner-card">
+                    <div class="banner-card__img">
+                        <img src="img/bannner-card-img.png" alt="">
+                    </div>
+                    <p class="banner-card__subtitle">Лучшее предложение</p>
+                    <p class="banner-card__title h1">Баннер</p>
+                </a>
+            </div>
+        </div>
+    </div>
+
+
 </div>
 </body>
 
