--- a/src/ui.html
+++ b/src/ui.html
@@ -89,6 +89,16 @@
             </label>
         </div>
 
+        <div class="form-group">
+            <a href="" class="banner-card">
+                <div class="banner-card__img">
+                    <img src="img/bannner-card-img.png" alt="">
+                </div>
+                <p class="banner-card__subtitle">Лучшее предложение</p>
+                <p class="banner-card__title h1">Баннер</p>
+            </a>
+        </div>
+
     </div>    
 
 </body>
