--- a/src/home.html
+++ b/src/home.html
@@ -15,7 +15,7 @@
 
 
 <div class="home content">
-    <nav class="navigation">
+    <section class="navigation">
         <ul class="navigation__list container">
             <li class="navigation__item">
                 <a href="#" class="navigation__link">Тендеры</a>
@@ -42,12 +42,12 @@
                 <a href="#" class="navigation__link">Контакты</a>
             </li>
         </ul>
-    </nav>
-    <div class="banner" style="text-align: center">
+    </section>
+    <section class="banner" style="text-align: center">
         <img src="img/home-banner.jpg" alt="баннер">
-    </div>
+    </section>
 
-    <div class="capabilities">
+    <section class="capabilities">
         <div class="container">
             <div class="capabilities__container">
                 <div class="capabilities__item">
@@ -84,9 +84,9 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
-    <div class="product-catalog">
+    <section class="product-catalog">
         <div class="product-catalog__container container">
             <div class="product-catalog__left">
                 <h2 class="product-catalog__title h1">
@@ -195,7 +195,70 @@
                 </a>
             </div>
         </div>
-    </div>
+    </section>
+
+    <section class="statistic">
+        <div class="statistic__container container">
+            <div class="statistic__left">
+                <h2 class="statistic__title h1">
+                    STROIM100.RU в цифрах
+                </h2>
+                <div class="statistic__list">
+                    <div class="statistic__item">
+                        <div class="statistic__item-inner">
+                            <h6 class="statistic__caption">300 000</h6>
+                            <p class="statistic__description">
+                                зарегистрированных покупателей
+                            </p>
+                        </div>
+                    </div>
+                    <div class="statistic__item">
+                        <div class="statistic__item-inner">
+                            <h6 class="statistic__caption">4000</h6>
+                            <p class="statistic__description">
+                                заявок и звонков от покупателей ежемесячно
+                            </p>
+                        </div>
+                    </div>
+                    <div class="statistic__item">
+                        <div class="statistic__item-inner">
+                            <h6 class="statistic__caption">1 500 000</h6>
+                            <p class="statistic__description">
+                                просмотров покупателями Ваших цен
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="statistic__item">
+                        <div class="statistic__item-inner">
+                            <h6 class="statistic__caption">150 000</h6>
+                            <p class="statistic__description">
+                                уникальных посетителей портала
+                            </p>
+                        </div>
+                    </div>
+                    <div class="statistic__item">
+                        <div class="statistic__item-inner">
+                            <h6 class="statistic__caption">50 000</h6>
+                            <p class="statistic__description">
+                                горячих переходов на сайты поставщиков
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="statistic__right">
+                <a href="" class="banner-card">
+                    <div class="banner-card__img">
+                        <img src="img/bannner-card-img.png" alt="">
+                    </div>
+                    <p class="banner-card__subtitle">Лучшее предложение</p>
+                    <p class="banner-card__title h1">Баннер</p>
+                </a>
+            </div>
+        </div>
+    </section>
 
 
 </div>
