home pagd tariff

--- a/src/home.html
+++ b/src/home.html
@@ -260,6 +260,99 @@
         </div>
     </section>
 
+    <section class="tariff">
+        <div class="container">
+            <h2 class="tariff__title h1">
+                Тарифы размещения на портале
+            </h2>
+            <p class="tariff__notation">Размещение вашего каталога доступ к заявкам и тендерам</p>
+            <div class="tariff__wrapper">
+                <div class="tariff__card">
+                    <div class="tariff-card">
+                        <p class="tariff-card__label">Эконом</p>
+                        <p class="tariff-card__duration">на 3 месяца</p>
+                        <div class="tariff-card__conditions">
+                            <span class="tariff-card__price">18 000₽</span>
+                            <span class="tariff-card__location">/ регион</span>
+                        </div>
+                        <p class="tariff-card__notification">
+                            или подневный <b>160₽</b> / день
+                        </p>
+                        <p class="tariff-card__ratting">Ваш рейтинг в каталоге:</p>
+                        <div class="tariff-card__rating-container">
+                            <img src="img/star.svg" class="tariff-card__ratting-icon" alt="">
+                        </div>
+                        <a href="" class="tariff-card__btn btn btn-primary">Выбрать</a>
+                    </div>
+                </div>
+                <div class="tariff__card">
+                    <div class="tariff-card">
+                        <p class="tariff-card__label">Бизнес</p>
+                        <p class="tariff-card__duration">на 6 месяцев</p>
+                        <div class="tariff-card__conditions">
+                            <span class="tariff-card__price">32 400₽</span>
+                            <span class="tariff-card__location">/ регион</span>
+                        </div>
+                        <p class="tariff-card__notification">
+                            или подневный <b>180₽</b> / день
+                        </p>
+                        <p class="tariff-card__ratting">Ваш рейтинг в каталоге:</p>
+                        <div class="tariff-card__rating-container">
+                            <img src="img/star.svg" class="tariff-card__ratting-icon" alt="">
+                            <img src="img/star.svg" class="tariff-card__ratting-icon" alt="">
+                        </div>
+                        <a href="" class="tariff-card__btn btn btn-primary">Выбрать</a>
+                    </div>
+                </div>
+                <div class="tariff__card">
+                    <div class="tariff-card tariff-card--special">
+                        <p class="tariff-card__label">Спец размещение</p>
+                        <p class="tariff-card__duration">на 12 месяца</p>
+                        <div class="tariff-card__conditions">
+                            <span class="tariff-card__price">122 600₽</span>
+                            <span class="tariff-card__location">/ все регионы</span>
+                        </div>
+                        <p class="tariff-card__notification">
+                            Все РФ + СНГ (110 городов)
+                        </p>
+                        <p class="tariff-card__ratting">Ваш рейтинг в каталоге:</p>
+                        <div class="tariff-card__rating-container">
+                            <img src="img/star.svg" class="tariff-card__ratting-icon" alt="">
+                            <img src="img/star.svg" class="tariff-card__ratting-icon" alt="">
+                            <img src="img/star.svg" class="tariff-card__ratting-icon" alt="">
+                        </div>
+                        <a href="" class="tariff-card__btn btn btn-primary">Выбрать</a>
+                    </div>
+                </div>
+                <div class="tariff__card">
+                    <div class="tariff-card">
+                        <p class="tariff-card__label">Премиум</p>
+                        <p class="tariff-card__duration">на 3 месяца</p>
+                        <div class="tariff-card__conditions">
+                            <span class="tariff-card__price">57 600₽</span>
+                            <span class="tariff-card__location">/ регион</span>
+                        </div>
+                        <p class="tariff-card__notification">
+                            или подневный <b>200₽</b> / день
+                        </p>
+                        <p class="tariff-card__ratting">Ваш рейтинг в каталоге:</p>
+                        <div class="tariff-card__rating-container">
+                            <img src="img/star.svg" class="tariff-card__ratting-icon" alt="">
+                            <img src="img/star.svg" class="tariff-card__ratting-icon" alt="">
+                            <img src="img/star.svg" class="tariff-card__ratting-icon" alt="">
+                        </div>
+                        <a href="" class="tariff-card__btn btn btn-primary">Выбрать</a>
+                    </div>
+                </div>
+            </div>
+            <p class="tariff__info">
+                Есть вопросы?
+                <a href="mailto:" class="tariff__email">Напишите нам</a> или позвоните&nbsp;
+                <a href="tel:" class="tariff__phone">+7 (999) 999-99-99</a>
+            </p>
+        </div>
+    </section>
+
 
 </div>
 </body>
