finish home page

--- a/src/home.html
+++ b/src/home.html
@@ -353,6 +353,127 @@
         </div>
     </section>
 
+    <section class="marketing-banner">
+        <div class="container">
+            <div class="marketing-banner__inner">
+                <div class="marketing-banner__content">
+                    <h4 class="marketing-banner__title h1">
+                        Баннерная реклама
+                    </h4>
+                    <p class="marketing-banner__info">
+                        Размещение на главной и других страницах
+                    </p>
+                    <p class="marketing-banner__price h1">
+                        300 - 20 000 ₽
+                    </p>
+                    <p class="marketing-banner__location">за место / месяц</p>
+                    <a href="" class="link marketing-banner__more">
+                        Узнать подробнее
+                        <svg width="17" height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M16.7071 8.70711C17.0976 8.31658 17.0976 7.68342 16.7071 7.29289L10.3431 0.928932C9.95262 0.538408 9.31946 0.538408 8.92893 0.928932C8.53841 1.31946 8.53841 1.95262 8.92893 2.34315L14.5858 8L8.92893 13.6569C8.53841 14.0474 8.53841 14.6805 8.92893 15.0711C9.31946 15.4616 9.95262 15.4616 10.3431 15.0711L16.7071 8.70711ZM0 9H16V7H0V9Z" fill="currentColor"/>
+                        </svg>
+                    </a>
+                </div>
+                <div class="marketing-banner__image">
+                    <img src="img/marketing-banner.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="advantages">
+        <div class="container">
+            <h3 class="advantages__title h1">
+                Получайте лучшие предложения, на необходимые материалы, от наших поставщиков
+            </h3>
+            <div class="advantages__wrapper">
+                <div class="advantages__item">
+                    <p class="advantages__num">
+                        1
+                    </p>
+                    <p class="advantages__description">
+                        Заполни форму заявки
+                    </p>
+                </div>
+                <div class="advantages__item">
+                    <p class="advantages__num">
+                        2
+                    </p>
+                    <p class="advantages__description">
+                        Твою заявку получат все наши поставщики
+                    </p>
+                </div>
+                <div class="advantages__item">
+                    <p class="advantages__num">
+                        3
+                    </p>
+                    <p class="advantages__description">
+                        Выбирай из лучших предложений
+                    </p>
+                </div>
+            </div>
+            <a href="" class="btn btn-primary">Заполнить заявку</a>
+        </div>
+    </section>
+
+    <section class="faq">
+        <div class="container">
+            <h3 class="faq__title h1">
+                Часто задаваемые вопросы
+            </h3>
+            <div class="faq__item js-faq">
+                <div class="fag__head">
+                    <h6 class="faq__caption">
+                        Точно ли я начну получать заказы?
+                    </h6>
+                    <a href="" class="faq__btn">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M21.3338 11.1279C21.9466 11.1279 22.4434 11.5176 22.4434 11.9982C22.4434 12.4789 21.9466 12.8685 21.3338 12.8685H2.66623C2.05341 12.8685 1.55662 12.4789 1.55662 11.9982C1.55662 11.5176 2.05341 11.1279 2.66623 11.1279H21.3338Z" fill="currentColor"/>
+                            <path d="M12.8691 21.3318C12.8691 21.9446 12.4795 22.4414 11.9989 22.4414C11.5182 22.4414 11.1286 21.9446 11.1286 21.3318L11.1286 2.66427C11.1286 2.05145 11.5182 1.55466 11.9989 1.55466C12.4795 1.55466 12.8691 2.05145 12.8691 2.66427L12.8691 21.3318Z" fill="currentColor"/>
+                        </svg>
+                    </a>
+                </div>
+                <p class="faq__body">
+                    Мы абсолютно уверены в том, что вы будете получать заявки и звонки с нашего портала. Помимо опыта наших партнеров, об этом говорит статистика — 150 тыс. уникальных посетителей сайта (70% новых), 1.5 миллиона просмотров, более 5000 “горячих” покупателей в день переходят на сайты наших клиентов .
+                </p>
+            </div>
+            <div class="faq__item js-faq">
+                <div class="fag__head">
+                    <h6 class="faq__caption">
+                        Как разместить прайс-лист на вашем портале?
+                    </h6>
+                    <a href="" class="faq__btn">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M21.3338 11.1279C21.9466 11.1279 22.4434 11.5176 22.4434 11.9982C22.4434 12.4789 21.9466 12.8685 21.3338 12.8685H2.66623C2.05341 12.8685 1.55662 12.4789 1.55662 11.9982C1.55662 11.5176 2.05341 11.1279 2.66623 11.1279H21.3338Z" fill="currentColor"/>
+                            <path d="M12.8691 21.3318C12.8691 21.9446 12.4795 22.4414 11.9989 22.4414C11.5182 22.4414 11.1286 21.9446 11.1286 21.3318L11.1286 2.66427C11.1286 2.05145 11.5182 1.55466 11.9989 1.55466C12.4795 1.55466 12.8691 2.05145 12.8691 2.66427L12.8691 21.3318Z" fill="currentColor"/>
+                        </svg>
+                    </a>
+                </div>
+                <p class="faq__body">
+                    Мы абсолютно уверены в том, что вы будете получать заявки и звонки с нашего портала. Помимо опыта наших партнеров, об этом говорит статистика — 150 тыс. уникальных посетителей сайта (70% новых), 1.5 миллиона просмотров, более 5000 “горячих” покупателей в день переходят на сайты наших клиентов .
+                </p>
+            </div>
+            <div class="faq__item js-faq">
+                <div class="fag__head">
+                    <h6 class="faq__caption">
+                        В каких регионах я могу разместить своё предложение?
+                    </h6>
+                    <a href="" class="faq__btn">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M21.3338 11.1279C21.9466 11.1279 22.4434 11.5176 22.4434 11.9982C22.4434 12.4789 21.9466 12.8685 21.3338 12.8685H2.66623C2.05341 12.8685 1.55662 12.4789 1.55662 11.9982C1.55662 11.5176 2.05341 11.1279 2.66623 11.1279H21.3338Z" fill="currentColor"/>
+                            <path d="M12.8691 21.3318C12.8691 21.9446 12.4795 22.4414 11.9989 22.4414C11.5182 22.4414 11.1286 21.9446 11.1286 21.3318L11.1286 2.66427C11.1286 2.05145 11.5182 1.55466 11.9989 1.55466C12.4795 1.55466 12.8691 2.05145 12.8691 2.66427L12.8691 21.3318Z" fill="currentColor"/>
+                        </svg>
+                    </a>
+                </div>
+                <p class="faq__body">
+                    Мы абсолютно уверены в том, что вы будете получать заявки и звонки с нашего портала. Помимо опыта наших партнеров, об этом говорит статистика — 150 тыс. уникальных посетителей сайта (70% новых), 1.5 миллиона просмотров, более 5000 “горячих” покупателей в день переходят на сайты наших клиентов .
+                </p>
+            </div>
+        </div>
+    </section>
+
+
 
 </div>
 </body>
