create auth modal

--- a/src/home.html
+++ b/src/home.html
@@ -11,6 +11,7 @@
 <body>
 <div class="header">
     header
+    <a href="" class="btn btn-primary js-auth" data-bs-toggle="modal" data-bs-target="#authModal">Войти</a>
 </div>
 
 
@@ -370,7 +371,8 @@
                     <a href="" class="link marketing-banner__more">
                         Узнать подробнее
                         <svg width="17" height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M16.7071 8.70711C17.0976 8.31658 17.0976 7.68342 16.7071 7.29289L10.3431 0.928932C9.95262 0.538408 9.31946 0.538408 8.92893 0.928932C8.53841 1.31946 8.53841 1.95262 8.92893 2.34315L14.5858 8L8.92893 13.6569C8.53841 14.0474 8.53841 14.6805 8.92893 15.0711C9.31946 15.4616 9.95262 15.4616 10.3431 15.0711L16.7071 8.70711ZM0 9H16V7H0V9Z" fill="currentColor"/>
+                            <path d="M16.7071 8.70711C17.0976 8.31658 17.0976 7.68342 16.7071 7.29289L10.3431 0.928932C9.95262 0.538408 9.31946 0.538408 8.92893 0.928932C8.53841 1.31946 8.53841 1.95262 8.92893 2.34315L14.5858 8L8.92893 13.6569C8.53841 14.0474 8.53841 14.6805 8.92893 15.0711C9.31946 15.4616 9.95262 15.4616 10.3431 15.0711L16.7071 8.70711ZM0 9H16V7H0V9Z"
+                                  fill="currentColor"/>
                         </svg>
                     </a>
                 </div>
@@ -429,13 +431,17 @@
                     </h6>
                     <a href="" class="faq__btn">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M21.3338 11.1279C21.9466 11.1279 22.4434 11.5176 22.4434 11.9982C22.4434 12.4789 21.9466 12.8685 21.3338 12.8685H2.66623C2.05341 12.8685 1.55662 12.4789 1.55662 11.9982C1.55662 11.5176 2.05341 11.1279 2.66623 11.1279H21.3338Z" fill="currentColor"/>
-                            <path d="M12.8691 21.3318C12.8691 21.9446 12.4795 22.4414 11.9989 22.4414C11.5182 22.4414 11.1286 21.9446 11.1286 21.3318L11.1286 2.66427C11.1286 2.05145 11.5182 1.55466 11.9989 1.55466C12.4795 1.55466 12.8691 2.05145 12.8691 2.66427L12.8691 21.3318Z" fill="currentColor"/>
+                            <path d="M21.3338 11.1279C21.9466 11.1279 22.4434 11.5176 22.4434 11.9982C22.4434 12.4789 21.9466 12.8685 21.3338 12.8685H2.66623C2.05341 12.8685 1.55662 12.4789 1.55662 11.9982C1.55662 11.5176 2.05341 11.1279 2.66623 11.1279H21.3338Z"
+                                  fill="currentColor"/>
+                            <path d="M12.8691 21.3318C12.8691 21.9446 12.4795 22.4414 11.9989 22.4414C11.5182 22.4414 11.1286 21.9446 11.1286 21.3318L11.1286 2.66427C11.1286 2.05145 11.5182 1.55466 11.9989 1.55466C12.4795 1.55466 12.8691 2.05145 12.8691 2.66427L12.8691 21.3318Z"
+                                  fill="currentColor"/>
                         </svg>
                     </a>
                 </div>
                 <p class="faq__body">
-                    Мы абсолютно уверены в том, что вы будете получать заявки и звонки с нашего портала. Помимо опыта наших партнеров, об этом говорит статистика — 150 тыс. уникальных посетителей сайта (70% новых), 1.5 миллиона просмотров, более 5000 “горячих” покупателей в день переходят на сайты наших клиентов .
+                    Мы абсолютно уверены в том, что вы будете получать заявки и звонки с нашего портала. Помимо опыта
+                    наших партнеров, об этом говорит статистика — 150 тыс. уникальных посетителей сайта (70% новых), 1.5
+                    миллиона просмотров, более 5000 “горячих” покупателей в день переходят на сайты наших клиентов .
                 </p>
             </div>
             <div class="faq__item js-faq">
@@ -445,13 +451,17 @@
                     </h6>
                     <a href="" class="faq__btn">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M21.3338 11.1279C21.9466 11.1279 22.4434 11.5176 22.4434 11.9982C22.4434 12.4789 21.9466 12.8685 21.3338 12.8685H2.66623C2.05341 12.8685 1.55662 12.4789 1.55662 11.9982C1.55662 11.5176 2.05341 11.1279 2.66623 11.1279H21.3338Z" fill="currentColor"/>
-                            <path d="M12.8691 21.3318C12.8691 21.9446 12.4795 22.4414 11.9989 22.4414C11.5182 22.4414 11.1286 21.9446 11.1286 21.3318L11.1286 2.66427C11.1286 2.05145 11.5182 1.55466 11.9989 1.55466C12.4795 1.55466 12.8691 2.05145 12.8691 2.66427L12.8691 21.3318Z" fill="currentColor"/>
+                            <path d="M21.3338 11.1279C21.9466 11.1279 22.4434 11.5176 22.4434 11.9982C22.4434 12.4789 21.9466 12.8685 21.3338 12.8685H2.66623C2.05341 12.8685 1.55662 12.4789 1.55662 11.9982C1.55662 11.5176 2.05341 11.1279 2.66623 11.1279H21.3338Z"
+                                  fill="currentColor"/>
+                            <path d="M12.8691 21.3318C12.8691 21.9446 12.4795 22.4414 11.9989 22.4414C11.5182 22.4414 11.1286 21.9446 11.1286 21.3318L11.1286 2.66427C11.1286 2.05145 11.5182 1.55466 11.9989 1.55466C12.4795 1.55466 12.8691 2.05145 12.8691 2.66427L12.8691 21.3318Z"
+                                  fill="currentColor"/>
                         </svg>
                     </a>
                 </div>
                 <p class="faq__body">
-                    Мы абсолютно уверены в том, что вы будете получать заявки и звонки с нашего портала. Помимо опыта наших партнеров, об этом говорит статистика — 150 тыс. уникальных посетителей сайта (70% новых), 1.5 миллиона просмотров, более 5000 “горячих” покупателей в день переходят на сайты наших клиентов .
+                    Мы абсолютно уверены в том, что вы будете получать заявки и звонки с нашего портала. Помимо опыта
+                    наших партнеров, об этом говорит статистика — 150 тыс. уникальных посетителей сайта (70% новых), 1.5
+                    миллиона просмотров, более 5000 “горячих” покупателей в день переходят на сайты наших клиентов .
                 </p>
             </div>
             <div class="faq__item js-faq">
@@ -461,21 +471,56 @@
                     </h6>
                     <a href="" class="faq__btn">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M21.3338 11.1279C21.9466 11.1279 22.4434 11.5176 22.4434 11.9982C22.4434 12.4789 21.9466 12.8685 21.3338 12.8685H2.66623C2.05341 12.8685 1.55662 12.4789 1.55662 11.9982C1.55662 11.5176 2.05341 11.1279 2.66623 11.1279H21.3338Z" fill="currentColor"/>
-                            <path d="M12.8691 21.3318C12.8691 21.9446 12.4795 22.4414 11.9989 22.4414C11.5182 22.4414 11.1286 21.9446 11.1286 21.3318L11.1286 2.66427C11.1286 2.05145 11.5182 1.55466 11.9989 1.55466C12.4795 1.55466 12.8691 2.05145 12.8691 2.66427L12.8691 21.3318Z" fill="currentColor"/>
+                            <path d="M21.3338 11.1279C21.9466 11.1279 22.4434 11.5176 22.4434 11.9982C22.4434 12.4789 21.9466 12.8685 21.3338 12.8685H2.66623C2.05341 12.8685 1.55662 12.4789 1.55662 11.9982C1.55662 11.5176 2.05341 11.1279 2.66623 11.1279H21.3338Z"
+                                  fill="currentColor"/>
+                            <path d="M12.8691 21.3318C12.8691 21.9446 12.4795 22.4414 11.9989 22.4414C11.5182 22.4414 11.1286 21.9446 11.1286 21.3318L11.1286 2.66427C11.1286 2.05145 11.5182 1.55466 11.9989 1.55466C12.4795 1.55466 12.8691 2.05145 12.8691 2.66427L12.8691 21.3318Z"
+                                  fill="currentColor"/>
                         </svg>
                     </a>
                 </div>
                 <p class="faq__body">
-                    Мы абсолютно уверены в том, что вы будете получать заявки и звонки с нашего портала. Помимо опыта наших партнеров, об этом говорит статистика — 150 тыс. уникальных посетителей сайта (70% новых), 1.5 миллиона просмотров, более 5000 “горячих” покупателей в день переходят на сайты наших клиентов .
+                    Мы абсолютно уверены в том, что вы будете получать заявки и звонки с нашего портала. Помимо опыта
+                    наших партнеров, об этом говорит статистика — 150 тыс. уникальных посетителей сайта (70% новых), 1.5
+                    миллиона просмотров, более 5000 “горячих” покупателей в день переходят на сайты наших клиентов .
                 </p>
             </div>
         </div>
     </section>
 
 
-
 </div>
+
+<!-- AUTH Modal -->
+<div class="modal fade" id="authModal" tabindex="-1" aria-labelledby="authModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-stroim">
+        <div class="modal-content modal-stroim__content">
+            <button type="button" class="btn-close modal-stroim__btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            <div class="modal-stroim__title">Вход</div>
+            <form class="modal-stroim__form">
+                <label class="materil-group">
+                    <span class="materil-group__label">Email</span>
+                    <input type="email" class="form-control base-input materil-group__input">
+                    <div class="materil-group__error-text">Укажите email</div>
+                </label>
+                <label class="materil-group">
+                    <span class="materil-group__label">Пароль</span>
+                    <input type="password" class="form-control base-input materil-group__input">
+                    <div class="materil-group__error-text">Укажите пароль</div>
+                </label>
+                <button type="submit" class="btn btn-primary modal-stroim__btn">Войти</button>
+            </form>
+            <div class="modal-stroim__actions">
+                <a href="" class="modal-stroim__link link">
+                    Зарегистрироваться
+                </a>
+                <a href="" class="modal-stroim__link link">
+                    Забыли пароль?
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
+
 </body>
 
 </html>
